Check layered image build option compatibility